Modernized image search

--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,13 @@
       </div>
 
       <ul class="gallery"></ul>
+
+      <button class="load-more is-hidden">Load more</button>
+
+      <div class="loader is-hidden">
+        <div class="loader-spinner"></div>
+        <p>Loading images, please wait...</p>
+      </div>
     </main>
 
     <script type="module" src="./main.js"></script>
